# ticmymail

./: .gitignore  Dockerfile  README  pyproject.toml
.github/workflows/: about_pyproject_toml.md  allabout_workflowfiles.md  cd-develop.md  cd-develop.yml  cd-main.yml  ci.md  ci.yml
config/: app.json  config.md  nfr.json
config/dedupe/v1/: dedupe.rules.json
config/email/: provider.json  wrapper.md
config/email/templates/: clarification.md  status.md  workaround.md
config/integrations/: bigpanda.json  servicenow.json
config/schema/v1/: schema.json
docs/: 1_tmm_problems_statement_enduser_ANNOTATED.docx  2_tmm_problemstatement_detailing_poview_ANNOTATED.docx  3_tmm_technicalscoping_by_solution_architect_ANNOTATED.docx  4_tmm_technicallowleveldesign_dev_ANNOTATED_v2.docx
docs/a2a/part2/: personas.yaml  sample_email_payload.json
docs/agents/part2/: agent-prompt.json
docs/depreciated/: 1_tmm_problems_statement_enduser.docx  2_tmm_problemstatement_detailing_poview.docx  3_tmm_technicalscoping_by_solution_architect.docx  4_tmm_technicallowleveldesign_dev.docx  4_tmm_technicallowleveldesign_dev_ANNOTATED.docx  Clarification.txt  Create following.txt  Email MCP + inbox monitoring Doc‑4.txt  InstructingAgent_ DNOT_USE_ONLYFORHT.txt  NOyouarenotunderstanding or.txt  Outbound email.txt  first_prompt_output.md  tmm_copliot_Gaps questions.txt
manifests/dev/: deployment.yaml
manifests/prod/: deployment.yaml
src/ticmymail/: __main__.py  app.py  config.py  dedupe.py  email.py  integrations.py
src/tmm/: logger.py  testSetup.py
tests/: test_api.py
(+18 files in other folders)
